--- a/index.html
+++ b/index.html
@@ -335,11 +335,13 @@
               <li class="customer-icons-list list">
                 <a class="customer-icons-link link" href="#">
                   <svg class="Logo6 cus-svg" width="104px" height="56px">
-                    <use href="./images/icons.svg#Logo6">
+                    <use href="./images/icons.svg#Logo6"> 
                     </use>
                   </svg>
                 </a>
               </li>
+            </ul>
+          </div>
       </section>
     </main>
 
@@ -347,9 +349,9 @@
     <footer>
       <div class="container">
          <div class="end">
-           <div class="logo-end">
+           <div class="end-headers">
              <!-- logo -->
-             <a class="end end-headers link" href="index.html"><span class="end-web">WEB</span><span
+             <a class="end-headers link" href="index.html"><span class="end-web">WEB</span><span
                  class="end-studio">STUDIO</span></a>
              <p class="end-sentence">Increase the flow of customers and sales for your business with digital marketing & growth
                solutions.</p>
@@ -383,8 +385,8 @@
                 </li>
                 <li class="end-icons-list list">
                   <a href="#" class="end-social-link">
-                    <svg class="end-svg-icons" width=24px height="24px">
-                      <use href="./images/icons.svg#instagram2">
+                    <svg class="end-svg-icons" width="24px" height="24px">
+                      <use href="./images/icons.svg#linkedin2">
                       </use>
                     </svg>
                   </a>
@@ -398,10 +400,11 @@
                   <input type="email" width="264px" height="40px" placeholder="E-mail">
                 </div>
                 <div class="footer-form-group">
-                  <button type="submit">
+                  <button type="submit" class="end-submit-btn">
                     Subscribe
-                    <svg width="24" height="24">
-                      <use href="images/svg/icons.svg#paper-plane"></use>
+                    <svg class="paper-plane-icon" width="24px" height="24px">
+                      <use href="./images/icons.svg#paper-plane">
+                      </use>
                     </svg>
                   </button>
                 </div>
@@ -415,54 +418,52 @@
       <div class="modal-content">
         <button class="modal-close" data-modal-close>
           <a href="#" class="modal-close-link">
-            <svg class="modal-close-icon" width=8px height="8px">
+            <svg class="modal-close-icon" width="8px" height="8px">
               <use href="./images/icons.svg#close">
               </use>
             </svg>
           </a>
         </button>
         <div class="modal-body">
-          <form action="#" class="modal-form" method="post" autocomplete="off">
-            <div class="form-group">
-              <label for="phone">Phone</label>
-              <div class="form-group-input">
-                <svg width="16" height="16">
-                  <use href="./images/svg/icons.svg#phone">
-                  </use>
+          <h4>Leave your contacts and we will call you back</h4>
+          <form class="user-contact" method="post" autocomplete="off">
+              <label class="user-contact-field"><span class="user-contact-label">Name</span>
+                <svg class="modal-label-icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#name"></use>
                 </svg>
-                <input type="tel" id="phone" name="phone">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="phone">Email</label>
-              <div class="form-group-input">
-                <svg width="16" height="16">
-                  <use href="./images/svg/icons.svg#email">
-                  </use>
-                </svg>
-                <input type="text" id="email" name="email">
-              </div>
-            </div>
-            <div class="form-group">
-              <label for="comment">Comment</label>
-              <div class="form-group-input">
-                <textarea id="comment" name="comment" placeholder="Text input">
-                </textarea>
-              </div>
-            </div>
-            <div class="form-group">
-              <input type="checkbox" id="agree" name="agree">
-              <label for="agree">"I accept the terms and conditions of the " <a href="#">Privacy Policy</a>
+                <input class="user-contact-input" type="text" name="full_name">
               </label>
-            </div>
-            <div class="submit-btn">
-              <button type="submit">Send</button>
-            </div>
-          </form>
-        </div>
+              <label class="user-contact-field"><span class="user-contact-label">Phone</span>
+                <svg class="modal-label-icon" width="18px" height="18px">
+                  <use href="./images/icons.svg#phone">
+                  </use>
+                </svg>  
+                <input class="user-contact-input" type="tel" name="phone">
+              </label>
+              <label class="user-contact-field"><span class="user-contact-label">Email</span>
+                <svg width="16px" height="16px">
+                  <use href="./images/icons.svg#email"></use>
+                </svg>
+                <input class="user-contact-input" type="text" name="email">
+              </label>
+              <label class="user-contact-field user-contact-comment"><span class="user-contact-label">Comment</span>
+                <textarea class="modal-comment" name="comment" placeholder="Text input">
+                </textarea>
+              </label>
+              <div class="user-contact-checkbox">
+                <input type="checkbox" id="agree" name="agree">
+                <label for="agree">
+                  <svg width="10px" height="8px">
+                    <use href="./images/icons.svg#check"></use>
+                  </svg>
+                  I accept the terms and conditions of the <a href="#">Privacy Policy</a>
+                </label>
+              </div>
+              <button class="modal-submit" type="submit">Send</button>
+              </form>
+          </div>
       </div>
     </div>
-
     <script src="js/modal.js"></script>
   </body>
   
